# learn_elf

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
delf/: Cargo.toml
delf/src/: lib.rs  parse.rs
samples/echidna/: Cargo.toml
samples/echidna/src/: main.rs  support.rs
src/: autosym.py  bar.c  bss.asm  bss2.asm  bss3.asm  chimera.c  entry_point  entry_point.c  gdb-elk.py  hello-dl.asm  hello-nolibc.c  hello.asm  ifunc-nolibc.c  main.rs  msg.asm  name.rs  nodata.asm  process.rs  procfs.rs
