[package]
name = "elk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["delf"]

[dependencies]
custom_debug_derive = "0.5"
delf = { path = "./delf" }
enumflags2 = "0.7.5"
multimap = "0.8.3"
mmap = "0.1"
region = "3"
thiserror = "1.0.38"
argh = "0.1.10"
nom = "7.1.3"

[profile.release]
lto = true
strip = true
